--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -7,41 +7,41 @@
     <link rel="stylesheet" href="style.css">
     <title>Calculadora BeeTech</title>
 </head>
+
 <body class="center">
     <div id="main" class="divCard">
         <div class="divImagem">
-                <img class="imagem" src="logo-beetech.png" alt=""><br>
-                    <h1>Simulador Financeiro</h1>
-                </div>
-                <div class="divPerguntas">
-                    <label for="inColmeias">
-                        Insira a quantidade de colmeias: <br>
-                        <input type="text" id="inColmeias" class="input"><br>
-                    </label>
-                    <label for="inProducao">
-                        Produção média por colmeia no mês (em kg): <br>
-                        <input type="number" id="inProducao" class="input"><br>
-                    </label>
-                    <label for="inPreco">
-                        Preço do kg do mel (em R$): <br>
-                        <input type="number" id="inPreco" class="input"><br>
-                    </label>
-                </div>
-                <div class="divBotao">
-                    <button onclick="showRelatorMouth()" class="botaoCalcular">MENSAL</button>
-                    <button onclick="showRelatorAnuel()" class="botaoCalcular">ANUAL</button>
-                </div>
-                <div class="divMensagem" id="divMensagem">Os relatórios irão aparecer aqui::</div> 
+            <img class="imagem" src="logo-beetech.png" alt="Logo BeeTech"><br>
+            <h1>Simulador Financeiro</h1>
+        </div>
+
+        <div class="divPerguntas">
+            <label for="inColmeias">
+                Insira a quantidade de colmeias: <br>
+                <input type="number" id="inColmeias" class="input"><br>
+            </label>
+
+            <label for="inProducao">
+                Produção média por colmeia no mês (em kg): <br>
+                <input type="number" id="inProducao" class="input"><br>
+            </label>
+
+            <label for="inPreco">
+                Preço do kg do mel (em R$): <br>
+                <input type="number" id="inPreco" class="input"><br>
+            </label>
+        </div>
+
+        <div class="divBotao">
+            <button onclick="mostrarRelatorioMensal()" class="botaoCalcular">MENSAL</button>
+            <button onclick="mostrarRelatorioAnual()" class="botaoCalcular">ANUAL</button>
+        </div>
+
+        <div class="divMensagem" id="divMensagem">Os relatórios irão aparecer aqui:</div>
     </div>
+
     <script>
-        var name;
-        var iHive = 0;
-        var qtdHive = 0;
-        var winner;
-        var winnerTemperature;
-        var winnerKG;
-  
-        function showRelatorMouth() {
+        function mostrarRelatorioMensal() {
             var colmeias = Number(inColmeias.value);
             var kgPorColmeiaMes = Number(inProducao.value);
             var preco = Number(inPreco.value);
@@ -53,34 +53,32 @@
             var faturamentoComPerdaMes = producaoComPerdaMes * preco;
             var faturamentoSemPerdaMes = producaoSemPerdaMes * preco;
 
-
             var diferencaFaturamentoMes = faturamentoSemPerdaMes - faturamentoComPerdaMes;
-
-
             var percentualPerda = (perdaProducaoMes * 100) / producaoComPerdaMes;
 
-
             divMensagem.innerHTML = `
-      <div class="container_line">
-        DADOS MENSAIS  <div class="halfline"></div><br>
-    </div> 
-    <br>
-    <br>
-        <span>Nossos serviços irão proporcionar <span style="color:green">faturamento </span> de  até <span style="color:green">${percentualPerda}</span>% a mais na sua receita</span><br><br>
-        <span>Produção antes(mês): <span class="backgroundDado">${producaoComPerdaMes}kg</span></span><br>
-        <span>Produção depois(mês): <span class="backgroundDado">${producaoSemPerdaMes}kg</span></span><br>
-                        <br>
-        <span >KG perdidos por mês:<span class="vermelho"> ${perdaProducaoMes}kg </span></span><br>
-        <br>
+                <div class="container_linha">
+                    DADOS MENSAIS <div class="metade_linha"></div><br>
+                </div> 
 
-        <span>Faturamento antes(mês): <span class="backgroundDado">${faturamentoComPerdaMes}R$</span></span><br>
-        <span>Faturamento depois(mês): <span class="backgroundDado">${faturamentoSemPerdaMes}R$</span></span><br>
-        <span>Diferença de faturamento mês: <span style="color:green"> ${diferencaFaturamentoMes} </span>R$</span><br><br>
-       <div class="line" ></div><br>
-        <h3>Gráfico </h3>
-        *<span style="font-size:16px"> Seu faturamento antes e depois de utilizar nossos serviços</span>
-          <div class="chart">
-                        <div class="column">
+                <br>
+                <span>Nossos serviços podem proporcionar um aumento de até <span style="color:green">${percentualPerda.toFixed(2)}%</span> na sua receita.</span><br><br>
+
+                <span>Produção antes (mês): <span class="backgroundDado">${producaoComPerdaMes} kg</span></span><br>
+                <span>Produção depois (mês): <span class="backgroundDado">${producaoSemPerdaMes} kg</span></span><br><br>
+
+                <span>Kg perdidos por mês: <span class="vermelho">${perdaProducaoMes} kg</span></span><br><br>
+
+                <span>Faturamento antes (mês): <span class="backgroundDado">R$ ${faturamentoComPerdaMes}</span></span><br>
+                <span>Faturamento depois (mês): <span class="backgroundDado">R$ ${faturamentoSemPerdaMes}</span></span><br>
+                <span>Diferença no faturamento mensal: <span style="color:green">R$ ${diferencaFaturamentoMes}</span></span><br><br>
+
+                <div class="line"></div><br>
+                <h3>Gráfico</h3>
+                <span style="font-size:16px">Comparação do faturamento antes e depois de utilizar nossos serviços</span>
+
+                <div class="chart">
+                    <div class="column">
                         <span>100%-</span>
                         <span>85%-</span>
                         <span>75%-</span>
@@ -91,99 +89,82 @@
                         <span>25%-</span>
                         <span>15%-</span>
                         <span>5%-</span>
-                        </div>
-                        <div id="dados" class="charts">
-                            <div id="dado1" class="data">
-                                <div class="blocoRed"></div>
-                                <br>
-                                <span>Antes |</span>
-                            </div>  
-                            <div id="dado2" class="data" >
-                                <div class="blocoBlue"></div>
-                                <br>
-                                 <span>Depois</span>
-                            </div>  
-                        </div>
                     </div>
-        `;
-
+                    <div id="dados" class="tabelas">
+                        <div id="dado1" class="data">
+                            <div class="blocoRed"></div><br>
+                            <span>Antes</span>
+                        </div>  
+                        <div id="dado2" class="data">
+                            <div class="blocoBlue"></div><br>
+                            <span>Depois</span>
+                        </div>  
+                    </div>
+                </div>
+            `;
         }
-        function showRelatorAnuel() {
-            // Declaracao de variaveis
+
+        function mostrarRelatorioAnual() {
             var colmeias = Number(inColmeias.value);
             var kgPorColmeiaMes = Number(inProducao.value);
             var preco = Number(inPreco.value);
 
-
             var producaoComPerdaMes = colmeias * kgPorColmeiaMes;
+            var producaoComPerdaAno = producaoComPerdaMes * 12;
 
-            // KG ano com perda
-            var producaoComPerdaAno = producaoComPerdaMes * 12
-
-            // Calculo de perda ano
             var perdaProducaoAno = producaoComPerdaAno * 0.18;
-
-            // KG produzido ano sem a perda
             var producaoSemPerdaAno = producaoComPerdaAno + perdaProducaoAno;
 
-            // Faturamento  ano com perda
             var faturamentoComPerdaAno = producaoComPerdaAno * preco;
-
-            // Faturamento  ano sem perda
             var faturamentoSemPerdaAno = producaoSemPerdaAno * preco;
 
-            // Diferenca entre perda de faturamento ano
             var diferencaFaturamentoAno = faturamentoSemPerdaAno - faturamentoComPerdaAno;
 
-
-
-
             divMensagem.innerHTML = `
-        <div class="container_line">
-        DADOS ANUAIS  <div class="halfline"></div><br>
-        </div>
-        <br>
-        <span>Caso a taxa de produção mensal se mantenha a mesma, seriam esses os resultados:<br><br>
-        <span>Produção antes(ano): <span class="backgroundDado">${producaoComPerdaAno}kg</span></span><br>
-        <span>Produção depois(ano ): <span class="backgroundDado">${producaoSemPerdaAno}kg</span></span><br>
-        <span>Kg perdidos no ano: ${perdaProducaoAno}kg</span><br>
-        <br>
-        
-        <span>Faturamento antes(ano): <span class="backgroundDado">${faturamentoComPerdaAno}R$</span></span><br>
-        <span>Faturamento depois(ano): <span class="backgroundDado">${faturamentoSemPerdaAno}R$</span></span><br>
-        <span>Diferença de faturamento anual: ${diferencaFaturamentoAno}R$</span><br>
-        <h3>Gráfico</h3>
-        <span style="font-size:16px;">* Seu faturamento antes e depois de utilizar nossos serviços</span>
-          <div class="chartRow">
-                        <div class="columnRow">
-                            <div id="dado1Anual" class="dataRow">
-                                <span class="blocoRowRed"></span>
-                                <span>Antes</span>
-                            </div>  
-                            <div id="dado2Anual" class="dataRow">
-                                  <span class="blocoRowGreen"></span>
-                                  <span>Depois</span>
-                            </div>  
-                        </div>
-                        <div id="dadosAnual" class="charts">
-                            <span>5%-</span>
-                            <span>15%-</span>
-                            <span>25%-</span>
-                            <span>35%-</span>
-                            <span>45%-</span>
-                            <span>55%-</span>
-                            <span>65%-</span>
-                            <span>75%-</span>
-                            <span>85%-</span>
-                            <span>100%-</span>
-                            </div>
-                        </div>
-                        <br>
-        <br>
-               <div class="line"><br>
-        `;
+                <div class="container_linha">
+                    DADOS ANUAIS <div class="metade_linha"></div><br>
+                </div>
+
+                <br>
+                <span>Considerando a mesma produção mensal, os resultados no ano seriam:</span><br><br>
+
+                <span>Produção antes (ano): <span class="backgroundDado">${producaoComPerdaAno} kg</span></span><br>
+                <span>Produção depois (ano): <span class="backgroundDado">${producaoSemPerdaAno} kg</span></span><br>
+                <span>Kg perdidos no ano: <span class="vermelho">${perdaProducaoAno} kg</span></span><br><br>
+
+                <span>Faturamento antes (ano): <span class="backgroundDado">R$ ${faturamentoComPerdaAno}</span></span><br>
+                <span>Faturamento depois (ano): <span class="backgroundDado">R$ ${faturamentoSemPerdaAno}</span></span><br>
+                <span>Diferença no faturamento anual: <span style="color:green">R$ ${diferencaFaturamentoAno}</span></span><br><br>
+
+                <h3>Gráfico</h3>
+                <span style="font-size:16px">Comparação do faturamento anual antes e depois de utilizar nossos serviços</span>
+
+                <div class="linhaTabela">
+                    <div class="colunaLinha">
+                        <div id="dado1Anual" class="dataLinha">
+                            <span class="blocoLinhaVermelho"></span>
+                            <span>Antes</span>
+                        </div>  
+                        <div id="dado2Anual" class="dataLinha">
+                            <span class="blocoLinhaVerde"></span>
+                            <span>Depois</span>
+                        </div>  
+                    </div>
+                    <div id="dadosAnual" class="tabelas">
+                        <span>5%-</span>
+                        <span>15%-</span>
+                        <span>25%-</span>
+                        <span>35%-</span>
+                        <span>45%-</span>
+                        <span>55%-</span>
+                        <span>65%-</span>
+                        <span>75%-</span>
+                        <span>85%-</span>
+                        <span>100%-</span>
+                    </div>
+                </div>
+            `;
         }
     </script>
 </body>
-
 </html>
