fix: adjust remove of dasboard

--- a/Simulador Financeiro/index.html
+++ b/Simulador Financeiro/index.html
@@ -110,10 +110,9 @@
                 <span>Faturamento depois (ano): <span class="backgroundDado">R$ ${faturamentoSemPerdaAno.toFixed(2)}</span></span><br>
                 <span>Diferença no faturamento anual: <span style="color:green">R$ ${diferencaFaturamentoAno.toFixed(2)}</span></span><br><br>
 
-                <h3>Gráfico</h3>
-                <span style="font-size:50px">Comparação do faturamento anual antes e depois de utilizar nossos serviços</span>
 
-                <div class="linhaTabela">
+                
+                <div class="line"></div><br>
                 </div>
             `;
         }
