chore: change text about diference of production

--- a/Simulador Financeiro/index.html
+++ b/Simulador Financeiro/index.html
@@ -67,11 +67,11 @@
                 <span>Produção antes (mês): <span class="backgroundDado">${producaoComPerdaMes.toFixed(2)} kg</span></span><br>
                 <span>Produção depois (mês): <span class="backgroundDado">${producaoSemPerdaMes.toFixed(2)} kg</span></span><br><br>
 
-                <span>Kg perdidos por mês: <span class="vermelho">${perdaProducaoMes.toFixed(2)} kg</span></span><br><br>
+                <span>Aumento no KG produzidos por mês: <span style="color:green">${perdaProducaoMes.toFixed(2)} kg </span></span><br><br>
 
                 <span>Faturamento antes (mês): <span class="backgroundDado">R$ ${faturamentoComPerdaMes.toFixed(2)}</span></span><br>
                 <span>Faturamento depois (mês): <span class="backgroundDado">R$ ${faturamentoSemPerdaMes.toFixed(2)}</span></span><br>
-                <span>Diferença no faturamento mensal: <span style="color:green">R$ ${diferencaFaturamentoMes.toFixed(2)}</span></span><br><br>
+                <span>Aumento no faturamento mensal: <span style="color:green">R$ ${diferencaFaturamentoMes.toFixed(2)}</span></span><br><br>
 
                 <div class="line"></div><br>
                 </div>
@@ -104,14 +104,11 @@
 
                 <span>Produção antes (ano): <span class="backgroundDado">${producaoComPerdaAno.toFixed(2)} kg</span></span><br>
                 <span>Produção depois (ano): <span class="backgroundDado">${producaoSemPerdaAno.toFixed(2)} kg</span></span><br>
-                <span>Kg perdidos no ano: <span class="vermelho">${perdaProducaoAno.toFixed(2)} kg</span></span><br><br>
+                <span>Aumento nos KG produzidos: <span style="color:green">${perdaProducaoAno.toFixed(2)} kg</span></span><br><br>
 
                 <span>Faturamento antes (ano): <span class="backgroundDado">R$ ${faturamentoComPerdaAno.toFixed(2)}</span></span><br>
                 <span>Faturamento depois (ano): <span class="backgroundDado">R$ ${faturamentoSemPerdaAno.toFixed(2)}</span></span><br>
-                <span>Diferença no faturamento anual: <span style="color:green">R$ ${diferencaFaturamentoAno.toFixed(2)}</span></span><br><br>
-
-
-                
+                <span>Aumento no faturamento anual: <span style="color:green">R$ ${diferencaFaturamentoAno.toFixed(2)}</span></span><br><br>
                 <div class="line"></div><br>
                 </div>
             `;
